[package]
name = "wasmer-compiler-llvm"
description = "LLVM compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "llvm"]
documentation = "https://docs.rs/wasmer-compiler-llvm/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "LICENSE"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { path = "../compiler", version = "=6.1.0-rc.1", features = [
	"translator",
	"compiler",
] }
wasmer-vm = { path = "../vm", version = "=6.1.0-rc.1" }
wasmer-types = { path = "../types", version = "=6.1.0-rc.1" }
target-lexicon = { workspace = true, default-features = false }
smallvec.workspace = true
object = { workspace = true, features = ["read"] }
libc.workspace = true
byteorder.workspace = true
itertools.workspace = true
rayon.workspace = true
phf = { version = "0.11.2", features = ["macros"] }
tracing = { workspace = true, features = ["log"] }

[dependencies.inkwell]
package = "inkwell"
version = "0.5.0"
default-features = false
features = [
	"llvm18-0-prefer-static",
	"target-x86",
	"target-aarch64",
	"target-riscv",
	"target-loongarch",
]

[build-dependencies]
cc = "1.0"
regex = "1.5"
semver.workspace = true
rustc_version = "0.4"

[features]
test = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
