[package]
name = "wasmer-compiler-llvm"
description = "LLVM compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "llvm"]
documentation = "https://docs.rs/wasmer-compiler-llvm/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "LICENSE"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { workspace = true, features = [
	"translator",
	"compiler",
] }
wasmer-vm.workspace = true
wasmer-types = { workspace = true, default-features = true }
target-lexicon = { workspace = true }
smallvec.workspace = true
object = { workspace = true, features = ["read"] }
libc.workspace = true
byteorder.workspace = true
itertools.workspace = true
rayon.workspace = true
phf = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
inkwell = { workspace = true, features = [
	"llvm18-0-prefer-static",
	"target-x86",
	"target-aarch64",
	"target-riscv",
	"target-loongarch",
] }

[build-dependencies]
cc.workspace = true
regex.workspace = true
semver.workspace = true
rustc_version.workspace = true

[features]
test = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
