[package]
name = "wasmer-compiler-singlepass"
description = "Singlepass compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "singlepass"]
documentation = "https://docs.rs/wasmer-compiler-singlepass/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "LICENSE"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { path = "../compiler", version = "=6.1.0-rc.2", features = ["translator", "compiler"], default-features = false }
wasmer-types = { path = "../types", version = "=6.1.0-rc.2", default-features = false, features = ["std"] }
hashbrown = { workspace = true, optional = true }
gimli = { workspace = true, optional = true }
enumset.workspace = true
more-asserts.workspace = true
dynasm = "3.2.0"
dynasmrt = "3.2.0"
byteorder.workspace = true
smallvec.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
target-lexicon = { workspace = true, default-features = false }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "rayon", "unwind", "avx"]
wasm = ["std", "unwind", "avx"]
std = ["wasmer-compiler/std", "wasmer-types/std"]
core = ["hashbrown", "wasmer-types/core"]
unwind = ["gimli"]
sse = []
avx = []
enable-serde = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
