[package]
name = "wasmer-compiler-singlepass"
description = "Singlepass compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "singlepass"]
documentation = "https://docs.rs/wasmer-compiler-singlepass/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "LICENSE"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { path = "../compiler", version = "=7.2.0-rc.1", features = [
  "translator",
  "compiler",
] }
wasmer-types = { path = "../types", version = "=7.2.0-rc.1", features = [
  "std",
], default-features = false }
hashbrown = { workspace = true, optional = true }
gimli = { workspace = true, optional = true }
enumset.workspace = true
more-asserts.workspace = true
dynasm.workspace = true
dynasmrt.workspace = true
byteorder.workspace = true
smallvec.workspace = true
tempfile.workspace = true
itertools.workspace = true
target-lexicon.workspace = true
fixedbitset.workspace = true
rayon.workspace = true
object.workspace = true
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = [
  "derive",
], optional = true }
[dev-dependencies]
target-lexicon.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "unwind", "avx"]
wasm = ["std", "unwind", "avx"]
std = ["wasmer-compiler/std", "wasmer-types/std"]
core = ["hashbrown", "wasmer-types/core"]
unwind = ["gimli"]
sse = []
avx = []
enable-serde = ["serde", "serde_derive"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
