[package]
name = "wasmer-compiler"
description = "Base compiler abstraction for Wasmer WebAssembly runtime"
categories = ["wasm", "no-std"]
keywords = ["wasm", "webassembly", "compiler"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-types = { path = "../types", version = "=7.0.0-rc.2", default-features = false }
wasmparser = { workspace = true, default-features = false, optional = true }
enumset.workspace = true
hashbrown = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
serde_bytes = { workspace = true, optional = true }
smallvec.workspace = true
loupe = { workspace = true, optional = true, features = [
	"indexmap",
	"enable-indexmap",
] }

backtrace.workspace = true
memmap2.workspace = true
more-asserts.workspace = true

cfg-if.workspace = true
leb128.workspace = true
enum-iterator.workspace = true

bytes.workspace = true
self_cell.workspace = true
rkyv.workspace = true
shared-buffer.workspace = true
libc.workspace = true
target-lexicon.workspace = true
object = { workspace = true, features = ["write"] }
itertools.workspace = true
tempfile.workspace = true
rangemap.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-vm = { path = "../vm", version = "=7.0.0-rc.2" }
region.workspace = true
which.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
	"Win32_System_Diagnostics_Debug",
] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
macho-unwind-info.workspace = true

[features]
default = ["std"]
# This feature is for compiler implementors, it enables using `Compiler` and
# `CompilerConfig`, as well as the included wasmparser.
# Disable this feature if you just want a headless engine.
translator = ["wasmparser"]
compiler = ["translator"]
wasmer-artifact-load = []
wasmer-artifact-create = []
static-artifact-load = []
static-artifact-create = ["translator", "compiler"]
std = ["wasmer-types/std"]
core = ["hashbrown", "wasmer-types/core"]
enable-serde = ["serde", "serde_bytes", "wasmer-types/enable-serde"]
artifact-size = ["dep:loupe"]

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = [
	"static-artifact-create",
	"static-artifact-load",
	"wasmer-artifact-create",
	"wasmer-artifact-load",
]
rustc-args = ["--cfg", "docsrs"]
