[package]
name = "wasmer-config"
version = "0.600.1"
description = "Configuration types for Wasmer."
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["wasm", "wasmer", "toml"]
categories = ["parser-implementations", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
toml = { workspace = true }
thiserror = "1"
semver = { version = "1", features = ["serde"] }
serde_json = "1"
serde_yaml.workspace = true
indexmap = { workspace = true, features = ["serde"] }
derive_builder = "0.12.0"
bytesize = { version = "1.3.0", features = ["serde"] }
schemars = { version = "0.8.16", features = ["url", "indexmap2"] }
url = { version = "2.5.0", features = ["serde"] }
hex = "0.4.3"
ciborium = "0.2.2"
saffron = { version = "0.1.0", features = ["std"] }

[dev-dependencies]
pretty_assertions.workspace = true
serde_json = "1.0.116"
tempfile = "3.3.0"
