[package]
name = "wasmer-config"
version = "0.601.0-rc.1"
description = "Configuration types for Wasmer."
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["wasm", "wasmer", "toml"]
categories = ["parser-implementations", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
toml.workspace = true
thiserror.workspace = true
semver = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
derive_builder = "0.12.0"
bytesize = { workspace = true, features = ["serde"] }
schemars = { version = "0.8.16", features = ["url", "indexmap2"] }
url = { workspace = true, features = ["serde"] }
hex.workspace = true
ciborium.workspace = true
saffron = { version = "0.1.0", features = ["std"] }

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
tempfile.workspace = true
