[package]
name = "wasmer-emscripten-tests"
version = "0.12.0"
description = "Tests for our Emscripten implementation"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
publish = false
build = "build/mod.rs"

[dependencies]
wasmer-emscripten = { path = "../emscripten", version = "0.12.0" }
wasmer-runtime = { path = "../runtime", version = "0.12.0", default-features = false }
wasmer-clif-backend = { path = "../clif-backend", version = "0.12.0", optional = true}
wasmer-llvm-backend = { path = "../llvm-backend", version = "0.12.0", optional = true, features = ["test"] }
wasmer-singlepass-backend = { path = "../singlepass-backend", version = "0.12.0", optional = true }

[dev-dependencies]
wabt = "0.9.1"
wasmer-dev-utils = { path = "../dev-utils", version = "0.12.0"}

[build-dependencies]
glob = "0.3"

[features]
clif = ["wasmer-clif-backend", "wasmer-runtime/default-backend-cranelift"]
singlepass = ["wasmer-singlepass-backend", "wasmer-runtime/default-backend-singlepass"]
llvm = ["wasmer-llvm-backend", "wasmer-runtime/default-backend-llvm"]
