[package]
name = "wasmer-emscripten"
version = "3.1.0"
description = "Emscripten implementation library for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "abi", "emscripten", "posix"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
lazy_static = "1.4"
libc = "^0.2"
log = "0.4"
time = { version = "0.2", features = ["std"] }
wasmer = { path = "../api", version = "=3.1.0", default-features = false, features = ["sys", "compiler"] }
wasmer-types = { path = "../types", version = "=3.1.0" }

[target.'cfg(windows)'.dependencies]
getrandom = "0.2"
