[package]
name = "wasmer-emscripten"
description = "Emscripten implementation library for Wasmer WebAssembly runtime"
categories = ["wasm", "os"]
keywords = ["wasm", "webassembly", "abi", "emscripten", "posix"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
byteorder = "1.3"
lazy_static = "1.4"
libc = "^0.2"
log = "0.4"
time = { version = "0.3", features = ["std", "formatting"] }
wasmer = { path = "../api", version = "=4.3.0-alpha.1", default-features = false }
wasmer-types = { path = "../types", version = "=4.3.0-alpha.1" }

[target.'cfg(windows)'.dependencies]
getrandom = "0.2"

[package.metadata.docs.rs]
features = ["wasmer/sys"]
rustc-args = ["--cfg", "docsrs"]
