[package]
name = "wasmer-engine-dylib"
version = "2.0.0"
description = "Wasmer Dylib Engine"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "engine", "dylib"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../types", version = "2.0.0" }
wasmer-compiler = { path = "../compiler", version = "2.0.0" }
wasmer-vm = { path = "../vm", version = "2.0.0", features = ["enable-rkyv"] }
wasmer-engine = { path = "../engine", version = "2.0.0" }
wasmer-object = { path = "../object", version = "2.0.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "1.0"
tracing = "0.1"
leb128 = "0.2"
libloading = "0.7"
tempfile = "3.1"
which = "4.0"
rkyv = "0.6.1"
loupe = "0.1"

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = ["wasmer-compiler/translator"]

[badges]
maintenance = { status = "actively-developed" }
