[package]
name = "wasmer-engine-dylib"
version = "2.2.1"
description = "Wasmer Dylib Engine"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "engine", "dylib"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../types", version = "=2.2.1" }
wasmer-compiler = { path = "../compiler", version = "=2.2.1" }
wasmer-vm = { path = "../vm", version = "=2.2.1", features = ["enable-rkyv"] }
wasmer-engine = { path = "../engine", version = "=2.2.1" }
wasmer-object = { path = "../object", version = "=2.2.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "1.0"
tracing = { version = "0.1", features = ["log"] }
leb128 = "0.2"
libloading = "0.7"
tempfile = "3.1"
which = "4.0"
rkyv = "0.7.20"
loupe = "0.1"
enumset = "1.0"
enum-iterator = "0.7.0"
object = { version = "0.28.3", default-features = false, features = ["write"] }

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = ["wasmer-compiler/translator"]

[badges]
maintenance = { status = "actively-developed" }
