[package]
name = "wasmer-engine-native"
version = "1.0.0-alpha02.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "Wasmer JIT Engine"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/wasmerio/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../wasmer-types", version = "1.0.0-alpha02.0" }
wasmer-compiler = { path = "../compiler", version = "1.0.0-alpha02.0" }
wasmer-vm = { path = "../vm", version = "1.0.0-alpha02.0" }
wasmer-engine = { path = "../engine", version = "1.0.0-alpha02.0" }
wasmer-object = { path = "../object", version = "1.0.0-alpha02.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "0.1"
tracing = "0.1"
bincode = "1.3"
leb128 = "0.2"
libloading = "0.6"
tempfile = "3.1"

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = []

[badges]
maintenance = { status = "actively-developed" }
