[package]
name = "wasmer-engine-native"
version = "1.0.2"
description = "Wasmer Native Engine"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "engine", "native"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../wasmer-types", version = "1.0.2" }
wasmer-compiler = { path = "../compiler", version = "1.0.2" }
wasmer-vm = { path = "../vm", version = "1.0.2" }
wasmer-engine = { path = "../engine", version = "1.0.2" }
wasmer-object = { path = "../object", version = "1.0.2" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "0.1"
tracing = "0.1"
bincode = "1.3"
leb128 = "0.2"
libloading = "0.7"
tempfile = "3.1"
which = "4.0"

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = []

[badges]
maintenance = { status = "actively-developed" }
